--- a/PoTunes/PoTunes/PCWebViewController.xib
+++ b/PoTunes/PoTunes/PCWebViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PCWebViewController">
@@ -19,12 +19,10 @@
             <subviews>
                 <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JX2-6o-gvz">
                     <rect key="frame" x="20" y="20" width="240" height="128"/>
-                    <animations/>
                     <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
                 </webView>
                 <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="mYN-x8-l00">
                     <rect key="frame" x="-10" y="-10" width="20" height="20"/>
-                    <animations/>
                     <constraints>
                         <constraint firstAttribute="width" constant="32" id="H6H-8I-Dbx"/>
                         <constraint firstAttribute="height" constant="20" id="z2E-Fg-brf"/>
@@ -43,7 +41,6 @@
                     </variation>
                 </activityIndicatorView>
             </subviews>
-            <animations/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="mYN-x8-l00" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="4Ef-Tr-w9A"/>
@@ -59,12 +56,12 @@
                     <exclude reference="mYN-x8-l00"/>
                 </mask>
                 <mask key="constraints">
+                    <exclude reference="4Ef-Tr-w9A"/>
+                    <exclude reference="Li3-Pj-VnI"/>
                     <exclude reference="ErZ-BQ-I9P"/>
                     <exclude reference="N7S-FX-ncX"/>
                     <exclude reference="esQ-t0-L6c"/>
                     <exclude reference="v67-CV-tmj"/>
-                    <exclude reference="4Ef-Tr-w9A"/>
-                    <exclude reference="Li3-Pj-VnI"/>
                 </mask>
             </variation>
             <variation key="heightClass=regular-widthClass=compact">
@@ -73,12 +70,12 @@
                     <include reference="mYN-x8-l00"/>
                 </mask>
                 <mask key="constraints">
+                    <include reference="4Ef-Tr-w9A"/>
+                    <include reference="Li3-Pj-VnI"/>
                     <include reference="ErZ-BQ-I9P"/>
                     <include reference="N7S-FX-ncX"/>
                     <include reference="esQ-t0-L6c"/>
                     <include reference="v67-CV-tmj"/>
-                    <include reference="4Ef-Tr-w9A"/>
-                    <include reference="Li3-Pj-VnI"/>
                 </mask>
             </variation>
         </view>
